tests/error/error02.sml
val prog =
  PROGRAM
    {classes=[],decls=[],funcs=[],
     stmts=[ST_PRINT {exp=EXP_DOT {field="x",obj=EXP_NUM 3}}]} : program
;
